[gd_scene load_steps=33 format=1]

[ext_resource path="res://Scripts/Stage button.gd" type="Script" id=1]
[ext_resource path="res://Sprites/Menu/Background.png" type="Texture" id=2]
[ext_resource path="res://Sprites/Menu/Crown.png" type="Texture" id=3]
[ext_resource path="res://Scripts/Dankmeme.gd" type="Script" id=4]
[ext_resource path="res://Sprites/Menu/Star.png" type="Texture" id=5]
[ext_resource path="res://Animations/Arena Panel.tres" type="Animation" id=6]
[ext_resource path="res://Animations/Stage Start.tres" type="Animation" id=7]
[ext_resource path="res://Animations/Credits Panel.tres" type="Animation" id=8]
[ext_resource path="res://Animations/Options Panel.tres" type="Animation" id=9]
[ext_resource path="res://Sprites/Menu/Title Name.png" type="Texture" id=10]
[ext_resource path="res://Sprites/Menu/Arena Menu.png" type="Texture" id=11]
[ext_resource path="res://Sprites/Menu/Credits Menu.png" type="Texture" id=12]
[ext_resource path="res://Sprites/Menu/Options Menu.png" type="Texture" id=13]
[ext_resource path="res://Sprites/Menu/Selector.png" type="Texture" id=14]
[ext_resource path="res://Sprites/Menu/Arena.png" type="Texture" id=15]
[ext_resource path="res://Sprites/Menu/Arena_Highlighted.png" type="Texture" id=16]
[ext_resource path="res://Sprites/Menu/Options.png" type="Texture" id=17]
[ext_resource path="res://Sprites/Menu/Options_Highlighted.png" type="Texture" id=18]
[ext_resource path="res://Sprites/Menu/Credits.png" type="Texture" id=19]
[ext_resource path="res://Sprites/Menu/Credits_Highlighted.png" type="Texture" id=20]
[ext_resource path="res://Sprites/Menu/Credits Text.png" type="Texture" id=21]
[ext_resource path="res://Sprites/Menu/Controller Layout.png" type="Texture" id=22]
[ext_resource path="res://Sprites/Menu/Back.png" type="Texture" id=23]
[ext_resource path="res://Sprites/Menu/Back_Highlighted.png" type="Texture" id=24]
[ext_resource path="res://Sprites/Menu/Dylan's Sprite.png" type="Texture" id=25]
[ext_resource path="res://Sprites/Menu/My Sprite.png" type="Texture" id=26]
[ext_resource path="res://Sprites/Menu/Lucid City Preview.png" type="Texture" id=27]
[ext_resource path="res://Sprites/Menu/Lucid City Select.png" type="Texture" id=28]
[ext_resource path="res://Sprites/Menu/Locked Stage.png" type="Texture" id=29]
[ext_resource path="res://Sprites/Menu/Fight.png" type="Texture" id=30]

[sub_resource type="FixedMaterial" id=1]

flags/visible = true
flags/double_sided = false
flags/invert_faces = false
flags/unshaded = false
flags/on_top = false
flags/lightmap_on_uv2 = true
flags/colarray_is_srgb = true
params/blend_mode = 0
params/depth_draw = 1
params/line_width = 0.0
fixed_flags/use_alpha = false
fixed_flags/use_color_array = false
fixed_flags/use_point_size = false
fixed_flags/discard_alpha = false
fixed_flags/use_xy_normalmap = false
params/diffuse = Color( 0.886719, 0.882335, 0.606155, 1 )
params/specular = Color( 0.886719, 0.844504, 0.616547, 1 )
params/emission = Color( 0.920187, 0.921875, 0.705811, 1 )
params/specular_exp = 40
params/detail_mix = 1.0
params/normal_depth = 1
params/shader = 0
params/shader_param = 0.5
params/glow = 0
params/point_size = 1.0
uv_xform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
textures/diffuse = ExtResource( 5 )
textures/diffuse_tc = 0
textures/detail_tc = 0
textures/specular_tc = 0
textures/emission_tc = 0
textures/specular_exp_tc = 0
textures/glow_tc = 0
textures/normal = ExtResource( 5 )
textures/normal_tc = 0
textures/shade_param_tc = 0

[sub_resource type="Animation" id=2]

resource/name = "Shake"
length = 0.6
loop = true
step = 0.01
tracks/0/type = "value"
tracks/0/path = NodePath("2D/Titlename:transform/rot")
tracks/0/interp = 1
tracks/0/imported = false
tracks/0/keys = {
"times": FloatArray( 0, 0.15, 0.45, 0.6 ),
"transitions": FloatArray( 1, 1, 1, 1 ),
"update": 0,
"values": [ 30.0, 21.6, 38.1, 30.0 ]
}

[node name="Node" type="Node"]

script/script = ExtResource( 1 )

[node name="Spatial" type="Spatial" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )

[node name="Camera" type="Camera" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 4.99989 )
projection = 0
fov = 60.0
near = 0.1
far = 100.0
keep_aspect = 1
current = false
visible_layers = 1048575
environment = null
h_offset = 0.0
v_offset = 0.0

[node name="Background" type="Sprite3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 2, 0, 0, 0, 2, 0, 0, 0, 2, 0, 0, 0 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/alpha_cut = 0
texture = ExtResource( 2 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )

[node name="Crown" type="Sprite3D" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0.356954, 0.310906 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
centered = true
offset = Vector2( 0, 0 )
flip_h = false
flip_v = false
modulate = Color( 1, 1, 1, 1 )
opacity = 1.0
pixel_size = 0.01
axis = 2
flags/transparent = true
flags/shaded = false
flags/alpha_cut = 0
texture = ExtResource( 3 )
vframes = 1
hframes = 1
frame = 0
region = false
region_rect = Rect2( 0, 0, 0, 0 )
script/script = ExtResource( 4 )

[node name="OmniLight" type="OmniLight" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 5.43459 )
layers = 1
params/enabled = true
params/editor_only = false
params/bake_mode = 0
params/energy = 1.0
colors/diffuse = Color( 1, 1, 1, 1 )
colors/specular = Color( 1, 1, 1, 1 )
shadow/shadow = false
shadow/darkening = 0.0
shadow/z_offset = 0.001
shadow/z_slope_scale = 0.0
shadow/esm_multiplier = 60.0
shadow/blur_passes = 1.0
projector = null
operator = 0
params/radius = 20.0
params/attenuation = 1.0

[node name="Particles" type="Particles" parent="."]

_import_transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, 0 )
transform/local = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 0, 0, -3.94255 )
layers = 1
geometry/visible = true
geometry/material_override = null
geometry/cast_shadow = 1
geometry/receive_shadows = true
geometry/range_begin = 0.0
geometry/range_end = 0.0
geometry/extra_cull_margin = 0.0
geometry/billboard = false
geometry/billboard_y = false
geometry/depth_scale = false
geometry/visible_in_all_rooms = false
geometry/use_baked_light = false
geometry/baked_light_tex_id = 0
material = SubResource( 1 )
amount = 75
emitting = true
visibility = AABB( -4, -4, -4, 8, 8, 8 )
emission_extents = Vector3( 0.1, 0.1, 0.1 )
emission_base_velocity = Vector3( 0, 0, 0 )
emission_points = Vector3Array(  )
gravity_normal = Vector3( 0, -1, 0 )
local_coords = false
emit_timeout = 0.0
vars/lifetime = 3.0
vars/spread = 0.2
vars/gravity = 0.2
vars/linear_vel = 5.0
vars/angular_vel = 0.02
vars/linear_accel = 0.0
vars/radial_accel = 0.0
vars/tan_accel = 0.0
vars/damping = 0.0
vars/initial_size = 0.05
vars/final_size = 0.05
vars/initial_angle = 0.0
vars/height_from_velocity = false
vars/height = 1.0
vars/height_speed_scale = 0.0
rand/lifetime = 0.0
rand/spread = 0.0
rand/gravity = 0.0
rand/linear_vel = 0.0
rand/angular_vel = 0.0
rand/linear_accel = 0.0
rand/radial_accel = 0.0
rand/tan_accel = 0.0
rand/damping = 0.0
rand/initial_size = 0.0
rand/final_size = 0.0
rand/initial_angle = 0.0
rand/height = 0.0
rand/height_speed_scale = 0.0
color_phases/count = 0
phase_0/pos = 0.0
phase_0/color = Color( 1, 1, 1, 1 )
phase_1/pos = 1.0
phase_1/color = Color( 0, 0, 0, 1 )
phase_2/pos = 1.0
phase_2/color = Color( 0, 0, 0, 1 )
phase_3/pos = 1.0
phase_3/color = Color( 0, 0, 0, 1 )

[node name="Title Shake" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
anims/Shake = SubResource( 2 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = "Shake"

[node name="Animation" type="AnimationPlayer" parent="."]

playback/process_mode = 1
playback/default_blend_time = 0.0
root/root = NodePath("..")
"anims/Arena Panel" = ExtResource( 6 )
"anims/Arena Panel (copy)" = ExtResource( 7 )
"anims/Credits Panel" = ExtResource( 8 )
"anims/Options Panel" = ExtResource( 9 )
"anims/Stage Start" = ExtResource( 7 )
playback/active = true
playback/speed = 1.0
blend_times = [  ]
autoplay = ""

[node name="2D" type="CanvasLayer" parent="."]

layer = 1
offset = Vector2( 0, 0 )
rotation = 0.0
scale = Vector2( 1, 1 )

[node name="Titlename" type="Sprite" parent="2D"]

transform/pos = Vector2( 299.01, 170.76 )
transform/rot = 30.0
transform/scale = Vector2( 0.956077, 0.956077 )
texture = ExtResource( 10 )

[node name="Arena Panel" type="Sprite" parent="2D"]

transform/pos = Vector2( 1272.07, 1573.77 )
transform/rot = -59.9999
transform/scale = Vector2( 3.1173, 4.94569 )
texture = ExtResource( 11 )

[node name="Credits Panel" type="Sprite" parent="2D"]

transform/pos = Vector2( 1283.02, 1593 )
transform/rot = -59.9999
transform/scale = Vector2( 3.1173, 4.94569 )
texture = ExtResource( 12 )

[node name="Options Panel" type="Sprite" parent="2D"]

transform/pos = Vector2( 1298.93, 1620.7 )
transform/rot = -59.9999
transform/scale = Vector2( 3.1395, 4.94569 )
texture = ExtResource( 13 )

[node name="Selector Panel" type="Sprite" parent="2D"]

transform/pos = Vector2( 1306.29, 1633.33 )
transform/rot = -59.9999
transform/scale = Vector2( 3.12305, 4.94569 )
texture = ExtResource( 14 )

[node name="Arena Button" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1023.0
margin/top = 355.0
margin/right = 1268.0
margin/bottom = 471.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 15 )
textures/focused = ExtResource( 16 )
params/resize_mode = 0
params/scale = Vector2( 0.7, 0.7 )
params/stretch_mode = 0

[node name="Options Button" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 872.0
margin/top = 475.0
margin/right = 1170.0
margin/bottom = 616.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 17 )
textures/focused = ExtResource( 18 )
params/resize_mode = 0
params/scale = Vector2( 0.85, 0.85 )
params/stretch_mode = 0

[node name="Credits Button" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 614.0
margin/top = 597.0
margin/right = 912.0
margin/bottom = 738.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 19 )
textures/focused = ExtResource( 20 )
params/resize_mode = 0
params/scale = Vector2( 0.85, 0.85 )
params/stretch_mode = 0

[node name="Credits" type="TextureButton" parent="2D"]

visibility/visible = false
focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 21 )
params/resize_mode = 0
params/stretch_mode = 0

[node name="Controller" type="TextureFrame" parent="2D"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = 0.0
margin/right = 1280.0
margin/bottom = 720.0
texture = ExtResource( 22 )
stretch_mode = 0

[node name="Back Button" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 8.0
margin/top = -162.0
margin/right = 183.0
margin/bottom = -79.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 23 )
textures/focused = ExtResource( 24 )
params/resize_mode = 0
params/scale = Vector2( 0.5, 0.5 )
params/stretch_mode = 0

[node name="Dylan" type="TextureFrame" parent="2D"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 245.0
margin/top = 280.0
margin/right = 355.0
margin/bottom = 390.0
texture = ExtResource( 25 )
expand = true
stretch_mode = 0

[node name="Joseph" type="TextureFrame" parent="2D"]

visibility/visible = false
focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 846.0
margin/top = 280.0
margin/right = 954.0
margin/bottom = 388.0
texture = ExtResource( 26 )
expand = true
stretch_mode = 0

[node name="Stage Preview" type="TextureFrame" parent="2D"]

focus/ignore_mouse = true
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 0.0
margin/top = -450.0
margin/right = 1280.0
margin/bottom = -15.0
texture = ExtResource( 27 )
stretch_mode = 0

[node name="Lucid City Select" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 380.0
margin/top = 800.0
margin/right = 463.0
margin/bottom = 1050.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 28 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Locked" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 480.0
margin/top = 800.0
margin/right = 563.0
margin/bottom = 1054.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 29 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Locked 2" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 580.0
margin/top = 800.0
margin/right = 663.0
margin/bottom = 1050.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 29 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Locked 3" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 680.0
margin/top = 800.0
margin/right = 763.0
margin/bottom = 1050.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 29 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Locked 4" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 780.0
margin/top = 800.0
margin/right = 863.0
margin/bottom = 1050.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 29 )
params/resize_mode = 1
params/stretch_mode = 0

[node name="Fight Button" type="TextureButton" parent="2D"]

focus/ignore_mouse = false
focus/stop_mouse = true
size_flags/horizontal = 2
size_flags/vertical = 2
margin/left = 1052.0
margin/top = 778.0
margin/right = 1264.0
margin/bottom = 878.0
toggle_mode = false
enabled_focus_mode = 2
shortcut = null
textures/normal = ExtResource( 30 )
params/resize_mode = 1
params/stretch_mode = 0

[connection signal="pressed" from="2D/Arena Button" to="." method="_on_Arena_Button_pressed"]

[connection signal="pressed" from="2D/Options Button" to="." method="_on_Options_Button_pressed"]

[connection signal="pressed" from="2D/Credits Button" to="." method="_on_Credits_Button_pressed"]

[connection signal="pressed" from="2D/Back Button" to="." method="_on_Back_Button_pressed"]

[connection signal="pressed" from="2D/Lucid City Select" to="." method="_on_Lucid_City_Select_pressed"]

[connection signal="pressed" from="2D/Locked" to="." method="_on_Locked_pressed"]

[connection signal="pressed" from="2D/Fight Button" to="." method="_on_Fight_Button_pressed"]


